install/0000_00_cluster-version-operator_02_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: openshift-cluster-version
  annotations:
    kubernetes.io/description: |
      This NetworkPolicy is used to deny all ingress and egress traffic by default in this namespace, matching all Pods, and serving as a baseline. At the moment no other Network Policy should be needed:
      - The cluster-version operator (CVO) is a host-networked Pod, so it is not affected by network policies.
      - Bare `version-...` Pods spawned by CVO do not require any network communication.
    exclude.release.openshift.io/internal-openshift-hosted: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
